[package]
name = "i18n_key_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
swc_core = { version = "0.90", features = [
    "common", 
    "ecma_ast", 
    "ecma_visit",
    "ecma_plugin_transform"
] }
swc_ecma_parser = { version = "0.143.5", features = ["typescript"] }
